--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && npx prettier ./src/**/*.{js,jsx,tsx,ts,css} --write && vite build",
-    "format": "npx prettier ./src/**/*.{js,jsx,tsx,ts,css} --write",
+    "build": "tsc && pnpx prettier ./src/**/*.{js,jsx,tsx,ts,css} --write && vite build",
+    "format": "pnpx prettier ./src/**/*.{js,jsx,tsx,ts,css} --write",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
